--- a/views/public/pages/certifcate/add.pug
+++ b/views/public/pages/certifcate/add.pug
@@ -383,7 +383,7 @@ html(lang='en')
                     .row
                       .col-md-12
                         .form-group.row
-                          label.col-sm-2.col-form-label &#x49A;&icy;&iecy;&scy;&lcy;&ocy;&vcy;&chcy;&icy;
+                          label.col-sm-2.col-form-label Бўлим бошлиғи
                           .col-sm-10
                             input.form-control(type='text' name='line11' required='' placeholder='Metrologiya xizmatining rahbari')
                     .row
