--- a/views/public/pages/certifcate/edit.pug
+++ b/views/public/pages/certifcate/edit.pug
@@ -181,7 +181,7 @@ html(lang='en')
                             label.col-sm-2.col-form-label &mcy;&iecy;&tcy;&rcy;&ocy;&lcy;&ocy;&gcy;&icy;&kcy; &tcy;&acy;&vcy;&scy;&icy;&fcy;&lcy;&icy;
                             .col-sm-10
                               textarea.form-control(id='' required='' name='line6' cols='30' rows='3' placeholder='ўлчаш воситаларини параметрларнинг номи, ўлчашлар, хатолик чегаралари, аниклик даражаси')
-                                | #{data.line6}
+                              | #{data.line6}
                       .row
                         .col-md-12
                           .form-group.row
@@ -194,7 +194,7 @@ html(lang='en')
                             label.col-sm-2.col-form-label &tcy;&acy;&lcy;&acy;&bcy;&lcy;&acy;&rcy;&icy;&gcy;&acy; &mcy;&ocy;&scy;&lcy;&icy;&gcy;&icy;
                             .col-sm-10
                               textarea.form-control(id='' name='line9' required='' cols='30' rows='3' placeholder='ўлчаш воситаларига куйиладиган талабларини регламентловчи норматив хужжат белгиланиши ва номи,ўлчаш  воситаси турининг таърифи')
-                                | #{data.line9}
+                              | #{data.line9}
                       .row
                         .col-md-6
                           .form-group.row
@@ -361,7 +361,7 @@ html(lang='en')
                             label.col-sm-2.col-form-label &mcy;&iecy;&tcy;&rcy;&ocy;&lcy;&ocy;&gcy;&icy;&kcy; &tcy;&acy;&vcy;&scy;&icy;&fcy;&lcy;&icy;
                             .col-sm-10
                               textarea.form-control(id='' required='' name='line7' cols='30' rows='3' placeholder='ўлчаш воситаларини параметрларнинг номи, ўлчашлар, хатолик чегаралари, аниклик даражаси')
-                                | #{data.line7}
+                              | #{data.line7}
                       .row
                         .col-md-12
                           .form-group.row
@@ -374,7 +374,7 @@ html(lang='en')
                             label.col-sm-2.col-form-label &tcy;&acy;&lcy;&acy;&bcy;&lcy;&acy;&rcy;&icy;&gcy;&acy; &mcy;&ocy;&scy;&lcy;&icy;&gcy;&icy;
                             .col-sm-10
                               textarea.form-control(id='' name='line10' required='' cols='30' rows='3' placeholder='ўлчаш воситаларига куйиладиган талабларини регламентловчи норматив хужжат белгиланиши ва номи,ўлчаш  воситаси турининг таърифи')
-                                | #{data.line10}
+                              | #{data.line10}
                       .row
                         .col-md-6
                           .form-group.row
@@ -384,9 +384,9 @@ html(lang='en')
                       .row
                         .col-md-12
                           .form-group.row
-                            label.col-sm-2.col-form-label &Mcy;&iecy;&tcy;&rcy;&ocy;&lcy;&ocy;&gcy;&icy;&yacy; &rcy;&acy;&#x4B3;&bcy;&acy;&rcy;&icy;
+                            label.col-sm-2.col-form-label Бўлим бошлиғи
                             .col-sm-10
-                              input.form-control(type='text' required='',value=data.line12, name='line12' placeholder='М.Ў.Метрология хизматининг  раҳбари')
+                              input.form-control(type='text' required='',value=data.line12, name='line12' placeholder='Метрология хизматининг  раҳбари')
                       .row
                         .col-md-12
                           .form-group.row
@@ -1063,8 +1063,8 @@ html(lang='en')
                           .form-group.row
                             label.col-sm-2.col-form-label &ocy;&bcy;&hardcy;&iecy;&kcy;&tcy;&ncy;&icy;&ncy;&gcy; &#x49B;&icy;&scy;&#x49B;&acy; &tcy;&acy;&vcy;&scy;&icy;&fcy;&icy;
                             .col-sm-10
-                              textarea.form-control(id='' name='line6',,required='' cols='30' rows='3' placeholder='синов воситаси ёрдамида синовдан ўтказиш мўлжалланган объектнинг қисқа тавсифи')
-                                | #{data.line6}
+                              textarea.form-control(id='' name='line6' required='' cols='30' rows='3' placeholder='синов воситаси ёрдамида синовдан ўтказиш мўлжалланган объектнинг қисқа тавсифи')
+                              | #{data.line6}
                       .row
                         .col-md-12
                           .form-group.row
