--- a/views/public/pages/certificate.pug
+++ b/views/public/pages/certificate.pug
@@ -4,7 +4,7 @@ html(lang='en')
     // Required meta tags
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    title Corona Admin
+    title REAL  ELECTRONICS  MChJ
     // plugins:css
     link(rel='stylesheet' href=path+'../assets/vendors/mdi/css/materialdesignicons.min.css')
     link(rel='stylesheet' href=path+'../assets/vendors/css/vendor.bundle.base.css')
